more spacing and font issues

--- a/common/common.scss
+++ b/common/common.scss
@@ -487,7 +487,14 @@ div.poll .poll-info .info-text,
 .category-list .topics {
     width: 100px;
     font-size: 0.778rem;
-    font-weight: 300;    
+    font-weight: 300;
+    .value {
+      font-size: 0.778rem;
+    }
+
+    .unit {
+      font-size: 0.778rem;
+    }
 }
 
 
